--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 #shuttleBackground {
+    position:relative;
     background-color: green;
     display: inline-block;
     height: 80%;
     width: 40%;
+}
+#rocket{
+    position:relative;
 }
